--- a/validation-book.cabal
+++ b/validation-book.cabal
@@ -18,3 +18,4 @@ executable validation-book
   main-is:             Main.hs
   default-language:    Haskell2010
   build-depends:       base >= 4.7 && < 5
+                     , validation
